# Drone-trajectory-tracking-and-replication

./: .gitignore  README.md  README_old.md  TODO  aprilgrid.yaml  runTestingEnv.md  test.py
Calibration_Tool/: IMU_True_data  PiSense_imu_param.yaml  README.md  bebop2_camera_calib.yaml  camchain-imucam-....datasetcalib.yaml  imu-....datasetcalib.yaml  results-imucam-....datasetcalib.txt
Calibration_Tool/cam_cal/: cam_0.6
Calibration_Tool/cam_cal/0.3avgA1_2/: camchain-imucam-datasetbebop2calib_A1_2.yaml  results-imucam-datasetbebop2calib_A1_2.txt
Calibration_Tool/cam_cal/0.5A1/: camchain-imucam-....datasetbebop2calib_A1.yaml  results-imucam-....datasetbebop2calib_A1.txt
Calibration_Tool/cam_cal/0.5A1_1/: camchain-imucam-....datasetbebop2calib_A1_1.yaml  results-imucam-....datasetbebop2calib_A1_1.txt
Calibration_Tool/cam_cal/0.5A1_2/: camchain-imucam-datasetbebop2calib_A1_2.yaml  results-imucam-datasetbebop2calib_A1_2.txt
Calibration_Tool/cam_cal/1.0A1/: camchain-imucam-....datasetbebop2calib_A1.yaml  (+1 more)
Calibration_Tool/imu_cal_cam3/: camchain-imucam-mediazartrisVOIDThesisDatasetBebopcalibrationimu_cam_cali3.yaml  camchain-mediazartrisVOIDThesisDatasetBebopcalibrationimu_cam_cali3.yaml  imu-mediazartrisVOIDThesisDatasetBebopcalibrationimu_cam_cali3.yaml  results-imucam-mediazartrisVOIDThesisDatasetBebopcalibrationimu_cam_cali3.txt
Calibration_Tool/imu_cal_cam4/: camchain-imucam-mediazartrisVOIDThesisDatasetBebopcalibrationimu_cam_cali4.yaml  results-imucam-mediazartrisVOIDThesisDatasetBebopcalibrationimu_cam_cali4.txt
compiling_scripts/: ClionStarter.bash  ClionStarter.sh  ParrotSphinxInstall.sh  buildPangolin.sh  build_after_pull.sh  fresh_install.sh  newInstall.sh  newLCSDscript.sh  runTestingEnv.sh  test.bash
compiling_scripts/testingScripts/: firmware_term.sh
output/: extrinsic_parameter.csv  vins_result_loop.csv  vins_result_no_loop.csv
thesis_paper/: presentation_link.md
workspace/: camera_camera_calib.yaml
workspace/msg/: Segment.msg
workspace/src/navigation/path_navigator/: CMakeLists.txt  package.xml
workspace/src/navigation/path_navigator/include/path_navigator/: MPC.h  bebop_command.h  line.h  path_nav_node.h  vector3d.h
workspace/src/navigation/path_navigator/src/: MPC.cpp  bebop_command.cpp  line.cpp  path_nav_node.cpp  vector3d.cpp
(+85 files in other folders)
